--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Car Expense Tracker - Dashboard</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -17,24 +17,25 @@
       <a href="fuel.html">Fuel</a>
       <a href="maintenance.html">Maintenance</a>
       <a href="settings.html">Settings</a>
+      <a href="signup.html">Signup</a>
     </nav>
   </header>
 
   <main>
-    <section class="summary">
+    <div class="summary">
       <div class="card">
         <h2>Total Expenses</h2>
-        <p>$0.00</p>
+        <p>₹0.00</p>
       </div>
       <div class="card">
         <h2>Monthly Average</h2>
-        <p>$0.00</p>
+        <p>₹0.00</p>
       </div>
       <div class="card">
         <h2>Cost per Km</h2>
-        <p>$0.00</p>
+        <p>₹0.00</p>
       </div>
-    </section>
+    </div>
   </main>
 
 </body>
