--- a/fuel.html
+++ b/fuel.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Car Expense Tracker - Fuel Log</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -21,42 +21,34 @@
   </header>
 
   <main>
-    <section class="fuel-form">
+    <div class="fuel-form">
       <h2>Log Fuel Purchase</h2>
-      <form id="fuelForm">
+      <form id="fuelForm" action="http://localhost:3000/fuel" method="post">
         <div class="form-group">
-          <label for="fuelDate">Date:</label>
-          <input type="date" id="fuelDate" required />
-        </div>
-        <div class="form-group">
-          <label for="fuelLiters">Liters Purchased:</label>
-          <input type="number" id="fuelLiters" step="0.01" required />
-        </div>
-        <div class="form-group">
-          <label for="fuelCost">Total Cost ($):</label>
-          <input type="number" id="fuelCost" step="0.01" required />
+          Date :<input type="date" name="fueldate" required>
+          Liters Purchased:<input type="number" name="fuelliters" step="0.01" required>
+          Total Cost (₹):<input type="number" name="fuelcost" step="0.01" required>
         </div>
         <button type="submit">Add Fuel Purchase</button>
       </form>
-    </section>
+    </div>
 
-    <section class="fuel-list">
+    <div class="fuel-list">
       <h2>Fuel History</h2>
       <table>
         <thead>
           <tr>
             <th>Date</th>
             <th>Liters Purchased</th>
-            <th>Total Cost ($)</th>
-            <th>Cost per Liter ($)</th>
+            <th>Total Cost (₹)</th>
+            <th>Cost per Liter (₹)</th>
             <th>Actions</th>
           </tr>
         </thead>
         <tbody id="fuelTableBody">
-          <!-- Data will be added dynamically here -->
         </tbody>
       </table>
-    </section>
+    </div>
   </main>
 
   <script src="js/fuel.js"></script>
